--- a/automation/capture_config_test.yml
+++ b/automation/capture_config_test.yml
@@ -4,15 +4,16 @@ coupling: PS5000A_DC
 vrange: PS5000A_5V
 offset_v: 0.0
 
-timebase: 0
-pre_ratio: 0.10        # 10% of samples acquired before trigger
-samples: 50000000
+timebase: 1              # ~2 ns/sample on your unit (timebase 0 ≈ 1 ns)
+samples: 100000
+pre_ratio: 0.0           # immediate start, no pre-trigger
 
+trig_enabled: false      # <— NEW: disable trigger for immediate capture
 trig_source: PS5000A_CHANNEL_A
 trig_level_mV: 500
 trig_direction: PS5000A_RISING
-auto_trig_ms: 1000
+auto_trig_ms: 0
 trig_delay_samples: 0
 
-csv_path: capture_50M.csv
-write_chunk: 2000000
+csv_path: capture_100k_2ns.csv
+write_chunk: 2000000     # irrelevant for 100k but fine
