--- a/automation/capture_config_test.yml
+++ b/automation/capture_config_test.yml
@@ -1,13 +1,12 @@
 resolution: "PS5000A_DR_8BIT"
-
-channel:  "PS5000A_CHANNEL_A"
+channel: "PS5000A_CHANNEL_A"
 coupling: "PS5000A_DC"
-vrange:   "PS5000A_5V"
+vrange: "PS5000A_5V"
 offset_v: 0.0
 
-timebase: 1            # ~2 ns/sample on your unit
-samples:  100000
-pre_ratio: 0.0         # no pre-trigger; immediate start
+timebase: 0
+samples: 10000000
+pre_ratio: 0.0
 
 trig_enabled: false
 trig_source: "PS5000A_CHANNEL_A"
@@ -16,5 +15,8 @@ trig_direction: "PS5000A_RISING"
 auto_trig_ms: 0
 trig_delay_samples: 0
 
-csv_path: "capture_100k_2ns.csv"
-write_chunk: 50000
+# save_format accepts: "csv", "numpy", or "both"
+save_format: "both"
+csv_path: "capture_10M_1ns.csv"
+numpy_path: "capture_10M_1ns.npz"
+write_chunk: 200000
